# WCR

./: CMakeLists.txt  application.cpp  application.h  camera.cpp  camera.h  commands.cpp  commands.h  common.cpp  common.h  glmdefines.h  main.cpp  readme.md
device/: context.cpp  context.h  debug.cpp  debug.h  device.cpp  device.h  resourcetypes.h
include/fastgltf/cmake/: dependencies.cmake
pipelines/: descriptors.cpp  descriptors.h  pipelines.cpp  pipelines.h
scenes/: scenemanager.cpp  scenemanager.h
shaders/: pbr.frag  pbr.frag.spv  vertex.vert.spv
shaders/src/glsl/: pbr.frag  resources.glsl  vertex.vert
shaders/src/slang/: pbr.slang  resources.slang-module  vertex.slang
shaders/src/slang/modules/: resources.slang
